# antivirus

./: key.jks  settings.gradle.kts
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/assets/: found_virus.json  scan.json
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/native/: checker.cpp  checker.h  files.cpp  main.cpp  md5.cpp  md5.h  security.cpp
app/src/main/res/drawable/: bg_dialog_rounded.xml  bg_main.xml  bg_progress.xml  bg_scan_gradient.xml  bottom_card_bg.xml  btn_clean_bg.xml  btn_optimize_bg.xml  btn_optimize_disabled_bg.xml  card_background.xml  circle_icon_bg.xml  circular_progress.xml  circular_progress_bg.xml  circular_progress_cleaner.xml  circular_progress_main.xml  dot_blue.xml  dot_cyan.xml  dot_purple.xml  fund_virus.xml  ic_antivirus.xml  ic_apps.xml  ic_arrow_right.xml  ic_arrow_white.xml  ic_back_arrow.xml  ic_battery.xml  ic_big_files.xml  ic_chart.xml  ic_check.xml  ic_cleaner.xml  ic_data.xml  ic_disk.xml  ic_drop.xml  ic_files.xml  ic_full_scan.xml  ic_memory.xml  ic_menu.xml  ic_phone.xml  ic_protection.xml  ic_qulf.xml  ic_ram.xml  ic_scan.xml  (+16 more)
app/src/main/res/layout/: activity_battery.xml  activity_cleaner.xml  activity_data.xml  activity_files.xml  activity_main.xml  activity_scan.xml  activity_scanner.xml  activity_security.xml  activity_virus.xml  (+13 more)
app/src/main/values/: colors.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+41 files in other folders)
